--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Farzeen Khan — Empowering Females</title>
 
-  <!-- Meta Pixel -->
+  <!-- Meta Pixel (your provided ID) -->
   <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -15,7 +15,7 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window,document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1294526649348599'); // Pixel ID
+  fbq('init', '1294526649348599'); // Pixel ID (kept as provided)
   fbq('track', 'PageView');
   </script>
   <noscript><img height="1" width="1" style="display:none"
@@ -29,62 +29,49 @@
       --muted:#d8b678;
       --whatsapp:#25D366;
       --bg:#000;
+      --glass: rgba(255,255,255,0.03);
     }
     *{box-sizing:border-box}
     body{margin:0;font-family:Inter,Arial,sans-serif;background:var(--bg);color:var(--accent);-webkit-font-smoothing:antialiased}
     a{color:inherit}
     .container{max-width:1000px;margin:0 auto;padding:20px}
 
-    /* ===== Buttons & general animation ===== */
+    /* ===== Buttons & animation ===== */
     .watch-wrap{text-align:center;margin-top:20px}
     .watch-btn{
       display:inline-block;padding:12px 26px;background:var(--accent);color:#000;font-weight:800;border-radius:30px;
       font-size:15px;box-shadow:0 6px 18px rgba(255,182,66,0.28);cursor:pointer;text-decoration:none;
-      animation:floatY 2s ease-in-out infinite;
-      transform-origin:center;
+      animation:floatY 2s ease-in-out infinite; transform-origin:center;
     }
-    @keyframes floatY {
-      0%{transform:translateY(0)}
-      50%{transform:translateY(-8px)}
-      100%{transform:translateY(0)}
-    }
-
-    /* micro-shake for action buttons */
+    @keyframes floatY {0%{transform:translateY(0)}50%{transform:translateY(-8px)}100%{transform:translateY(0)}}
     .pulse-shake{ animation:shakeX 1.6s infinite; }
-    @keyframes shakeX {
-      0%,100%{transform:translateX(0)}
-      20%{transform:translateX(-6px)}
-      40%{transform:translateX(6px)}
-      60%{transform:translateX(-4px)}
-      80%{transform:translateX(4px)}
-    }
+    @keyframes shakeX {0%,100%{transform:translateX(0)}20%{transform:translateX(-6px)}40%{transform:translateX(6px)}60%{transform:translateX(-4px)}80%{transform:translateX(4px)}}
 
-    /* ===== Coach section ===== */
+    /* ===== Coach ===== */
     .coach{padding:36px 20px;text-align:center}
-    .badge{background:var(--accent);color:#000;padding:8px 14px;border-radius:25px;display:inline-block;margin-bottom:12px;animation:popIn .6s ease}
-    @keyframes popIn{0{transform:scale(.8);opacity:0}100%{transform:scale(1);opacity:1}}
+    .badge{background:var(--accent);color:#000;padding:8px 14px;border-radius:25px;display:inline-block;margin-bottom:12px;animation:popIn .6s}
+    @keyframes popIn{0{transform:scale(.9);opacity:0}100{transform:scale(1);opacity:1}}
     h1{font-size:30px;margin:12px 0 6px;filter:drop-shadow(0 6px 18px rgba(255,182,66,0.12))}
-    .vision{background:var(--card);padding:14px;border-radius:12px;margin:14px auto;max-width:900px;color:#fff;box-shadow:0 8px 30px rgba(0,0,0,0.6);transform:translateY(0);animation:cardIn .6s ease}
-    @keyframes cardIn{0{opacity:0;transform:translateY(12px)}100{opacity:1;transform:none}}
+    .vision{background:linear-gradient(180deg,var(--card),#0b0b0b);padding:14px;border-radius:12px;margin:14px auto;max-width:900px;color:#fff;box-shadow:0 8px 30px rgba(0,0,0,0.6)}
 
     /* ===== Counters ===== */
     .counters{display:flex;justify-content:center;gap:14px;flex-wrap:wrap;margin:22px 0}
-    .counter-card{background:linear-gradient(145deg,#151515,#0e0e0e);border-radius:12px;padding:18px 22px;min-width:120px;box-shadow:0 10px 30px rgba(0,0,0,0.6);transition:transform .35s ease}
+    .counter-card{background:linear-gradient(145deg,#151515,#0e0e0e);border-radius:12px;padding:18px 22px;min-width:120px;box-shadow:0 10px 30px rgba(0,0,0,0.6);transition:transform .35s}
     .counter-card:hover{transform:translateY(-8px)}
-    .counter-card .value{font-size:26px;font-weight:800;color:var(--accent);text-shadow:0 6px 20px rgba(255,182,66,0.08)}
+    .counter-card .value{font-size:26px;font-weight:800;color:var(--accent)}
     .counter-card .label{font-size:13px;color:var(--muted)}
 
     /* ===== Features with icon motion ===== */
     .feature-section{background:linear-gradient(145deg,#0e0e0e,#000);padding:20px;border-radius:16px;margin:18px 0}
     .features{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:12px}
-    .feature-box{background:linear-gradient(145deg,var(--card),#0f0f0f);padding:14px;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,0.6);transition:transform .35s ease,box-shadow .35s;cursor:pointer}
+    .feature-box{background:linear-gradient(145deg,var(--card),#0f0f0f);padding:14px;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,0.6);transition:transform .35s,box-shadow .35s;cursor:pointer}
     .feature-box:hover{transform:translateY(-10px) scale(1.03);box-shadow:0 18px 40px rgba(255,182,66,0.12)}
     .feature-icon{font-size:22px;background:radial-gradient(circle,var(--accent),#c27803);color:#000;border-radius:50%;width:42px;height:42px;display:inline-flex;align-items:center;justify-content:center;margin-bottom:10px;transition:transform .6s}
     .feature-box:hover .feature-icon{transform:rotate(18deg) scale(1.12)}
 
     /* ===== Steps cards animated entry ===== */
     .steps{max-width:760px;margin:18px auto;display:grid;gap:12px}
-    .card{background:linear-gradient(145deg,#121212,#0b0b0b);padding:16px;border-radius:12px;box-shadow:0 14px 40px rgba(0,0,0,0.6);display:flex;gap:12px;align-items:flex-start;opacity:0;transform:translateX(20px);transition:all .6s cubic-bezier(.2,.9,.3,1)}
+    .card{background:linear-gradient(145deg,#121212,#0b0b0b);padding:16px;border-radius:12px;box-shadow:0 14px 40px rgba(0,0,0,0.6);display:flex;gap:12px;align-items:flex-start;opacity:0;transform:translateX(20px);transition:all .6s}
     .card.visible{opacity:1;transform:none}
     .step-circle{background:var(--accent);color:#000;border-radius:50%;width:44px;height:44px;display:flex;align-items:center;justify-content:center;font-weight:800}
 
@@ -95,18 +82,23 @@
     .faq-answer{max-height:0;overflow:hidden;background:#0b0b0b;padding:0 16px;color:#e0d4b0;transition:all .35s}
     .faq-item.active .faq-answer{padding:12px 16px;max-height:400px}
 
-    /* ===== Modal (animated) ===== */
+    /* ===== Modal (cleaner) ===== */
     .modal-backdrop{position:fixed;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.75);display:none;align-items:center;justify-content:center;z-index:9999;padding:18px}
-    .modal{background:#0f0f0f;border-radius:12px;padding:18px;max-width:460px;width:100%;box-shadow:0 30px 80px rgba(0,0,0,0.7);color:#fff;border:1px solid rgba(255,182,66,0.06);position:relative;transform:translateY(20px) scale(.98);opacity:0;transition:all .28s cubic-bezier(.2,.9,.3,1)}
+    .modal{background:linear-gradient(180deg,#0f0f0f,#0a0a0a);border-radius:12px;padding:18px;max-width:460px;width:100%;box-shadow:0 30px 80px rgba(0,0,0,0.7);color:#fff;border:1px solid rgba(255,182,66,0.06);position:relative;transform:translateY(20px) scale(.98);opacity:0;transition:all .28s}
     .modal.show{transform:translateY(0) scale(1);opacity:1}
     .modal h3{margin:0 0 8px;color:var(--accent);font-size:18px}
     .modal p{margin:0 0 10px;color:var(--muted);font-size:13px}
+    .modal .form-row{display:flex;gap:10px}
+    .modal .form-col{flex:1}
     .modal label{display:block;font-size:13px;color:#FFD700;margin-top:10px}
-    .modal input, .modal select{width:100%;padding:10px;margin-top:6px;border-radius:8px;background:#0b0b0b;color:#fff;border:1px solid #222}
+    .modal input, .modal select{width:100%;padding:10px;margin-top:6px;border-radius:8px;background:#0b0b0b;color:#fff;border:1px solid #222;box-sizing:border-box}
     .actions{display:flex;gap:10px;justify-content:flex-end;margin-top:14px}
     .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);padding:10px 12px;border-radius:8px;cursor:pointer}
     .btn-primary{background:var(--whatsapp);color:#000;padding:10px 14px;border-radius:8px;border:none;cursor:pointer;font-weight:800}
     .close-x{position:absolute;right:12px;top:8px;background:transparent;border:none;color:#fff;font-size:18px;cursor:pointer}
+
+    /* little input focus */
+    .modal input:focus, .modal select:focus { outline:2px solid rgba(255,182,66,0.12) }
 
     /* ===== Footer ===== */
     .copyright{ text-align:center;font-size:13px;color:var(--accent);margin-top:30px;padding:15px 10px;border-top:1px solid rgba(255,182,66,0.12);font-weight:700 }
@@ -115,6 +107,7 @@
       .watch-btn{padding:10px 16px;font-size:14px}
       .modal{padding:14px}
       h1{font-size:20px}
+      .modal .form-row{flex-direction:column}
     }
   </style>
 </head>
@@ -198,7 +191,7 @@
       <h2 style="text-align:center;margin-top:0">Frequently Asked Questions</h2>
       <p style="text-align:center;color:var(--muted)">"What work will I do?", "Is this legit?", "How much time will I need?"</p>
 
-      <div class="faq-item"><div class="faq-question">What kind of work will I be doing? <span style="opacity:.7"></span></div><div class="faq-answer">You'll be learning in-demand digital skills like social media management, content creation, digital marketing, and online business strategies. The work is completely legitimate and skill-based.</div></div>
+      <div class="faq-item"><div class="faq-question">What kind of work will I be doing?</div><div class="faq-answer">You'll be learning in-demand digital skills like social media management, content creation, digital marketing, and online business strategies. The work is completely legitimate and skill-based.</div></div>
 
       <div class="faq-item"><div class="faq-question">When can I expect to start earning?</div><div class="faq-answer">Most of my students start seeing income within the first month of consistent effort. Sustainable income typically builds up over 2-3 months.</div></div>
 
@@ -223,19 +216,28 @@
     </div>
   </div>
 
-  <!-- Modal -->
+  <!-- Modal (clearer with Phone field) -->
   <div id="leadModal" class="modal-backdrop" aria-hidden="true">
     <div class="modal" role="dialog" aria-modal="true" aria-labelledby="leadTitle">
       <button class="close-x" id="modalClose" aria-label="Close">&times;</button>
       <h3 id="leadTitle">Send Interest to Farzeen Mam</h3>
-      <p>Please fill these details — we'll open WhatsApp for you.</p>
+      <p>Please fill these details — we'll open WhatsApp with your message.</p>
 
       <form id="leadForm" autocomplete="off">
-        <label for="lead_name">📋 Full Name</label>
-        <input id="lead_name" name="name" type="text" placeholder="Your full name" required />
+        <!-- Name + Phone on same row for clarity -->
+        <div class="form-row">
+          <div class="form-col">
+            <label for="lead_name">📋 Full Name</label>
+            <input id="lead_name" name="name" type="text" placeholder="Your full name" required />
+          </div>
+          <div class="form-col">
+            <label for="lead_phone">📱 Phone Number</label>
+            <input id="lead_phone" name="phone" type="tel" placeholder="10-digit phone (eg. 9123456789)" inputmode="numeric" pattern="[0-9]*" required />
+          </div>
+        </div>
 
         <label for="lead_age">🎂 Age</label>
-        <input id="lead_age" name="age" type="number" placeholder="Your age" min="13" max="100" required />
+        <input id="lead_age" name="age" type="number" placeholder="Your age" min="10" max="120" required />
 
         <label for="lead_prof">💼 Profession</label>
         <select id="lead_prof" name="profession" required>
@@ -259,7 +261,7 @@
   <script>
     (function(){
       // CONFIG
-      const WA_NUMBER = "919289142724"; // +91 9289142724
+      const WA_NUMBER = "919289142724"; // +91 9289142724 (your chosen number)
       const DEST_NAME = "Farzeen Mam";
 
       // Elements
@@ -270,17 +272,18 @@
       const leadForm = document.getElementById('leadForm');
       const leadSource = document.getElementById('lead_source');
 
-      // Show modal with animation
+      // Show modal
       function showModal(source='') {
         leadSource.value = source;
         modal.style.display = 'flex';
-        modal.setAttribute('aria-hidden','false');
         const dialog = modal.querySelector('.modal');
-        setTimeout(()=> dialog.classList.add('show'), 20);
+        setTimeout(()=> dialog.classList.add('show'), 18);
+        modal.setAttribute('aria-hidden','false');
         document.body.style.overflow = 'hidden';
         setTimeout(()=> document.getElementById('lead_name').focus(), 120);
       }
 
+      // Hide modal
       function hideModal() {
         const dialog = modal.querySelector('.modal');
         dialog.classList.remove('show');
@@ -291,7 +294,7 @@
         }, 220);
       }
 
-      // Open modal on any CTA
+      // Open modal on CTA clicks
       openBtns.forEach(btn => {
         btn.addEventListener('click', function(e){
           e.preventDefault();
@@ -300,7 +303,7 @@
         });
       });
 
-      // Intercept direct wa.me anchors to use modal instead
+      // Intercept direct wa.me anchors to show modal instead (uniform behavior)
       document.addEventListener('click', function(e){
         const a = e.target.closest('a');
         if(a && a.href && a.href.includes('wa.me')){
@@ -318,40 +321,64 @@
         if(e.target === modal) hideModal();
       });
 
-      // Submit: validation -> pixel lead -> open whatsapp
+      // Submit handler: validate -> pixel lead -> open whatsapp with EXACT format requested
       leadForm.addEventListener('submit', function(e){
         e.preventDefault();
         const name = (document.getElementById('lead_name').value || '').trim();
+        const phoneRaw = (document.getElementById('lead_phone').value || '').trim();
         const age = (document.getElementById('lead_age').value || '').trim();
         const prof = (document.getElementById('lead_prof').value || '').trim();
         const src = (leadSource.value || '').trim();
 
-        if(!name || !age || !prof){
-          alert('Please fill all fields.');
+        // Validate phone digits (simple)
+        const phone = phoneRaw.replace(/\D/g,'');
+        if(!name || !phone || phone.length < 10 || !age || !prof){
+          alert('Please enter valid Name, 10-digit Phone, Age and Profession.');
           return;
         }
 
-        // Pixel Lead event
+        // Fire Meta Pixel Lead event if available
         try {
           if(typeof fbq === 'function'){
             fbq('track', 'Lead', {
               content_name: 'WhatsApp Modal Form',
               name: name,
+              phone: phone,
               age: age,
               profession: prof
             });
           }
-        } catch (err) { /* ignore */ }
+        } catch(err){ /* ignore errors */ }
 
-        // Compose message
-        let message = `${DEST_NAME},%0A%0AMy name is ${encodeURIComponent(name)}.%0AProfession: ${encodeURIComponent(prof)}.%0AAge: ${encodeURIComponent(age)}.%0A%0AI am interested in this work. Please share me work details.%0A`;
-        if(src) message += `%0ASource: ${encodeURIComponent(src)}`;
+        // Compose message exactly in requested structure (with dynamic values)
+        // Requested example (converted to a clean filled format):
+        // Hello Farzeen Mam ,I am interested in this work
+        // this is my detels
+        // My name is rahman.
+        // Phone No is 9289...
+        // Profession: job.
+        // Age: 10.
+        // Please share me work details.
 
-        // Open WhatsApp
+        let msgLines = [];
+        msgLines.push(`Hello ${DEST_NAME} ,I am interested in this work`);
+        msgLines.push(`this is my detels`);
+        msgLines.push(`My name is ${name}.`);
+        msgLines.push(`Phone No is ${phone}.`);
+        msgLines.push(`Profession: ${prof}.`);
+        msgLines.push(`Age: ${age}.`);
+        msgLines.push(`Please share me work details.`);
+
+        if(src) msgLines.push(`Source: ${src}`);
+
+        // join with newlines and URL-encode
+        const message = encodeURIComponent(msgLines.join('\n'));
+
+        // Open WhatsApp with the composed message
         const waUrl = `https://wa.me/${WA_NUMBER}?text=${message}`;
         window.open(waUrl, '_blank');
 
-        // Close modal & reset
+        // Reset & close
         leadForm.reset();
         hideModal();
       });
@@ -361,7 +388,7 @@
         if(e.key === 'Escape' && modal.style.display === 'flex') hideModal();
       });
 
-      // Counters - animate when visible
+      // Counters: animate when visible
       const counters = document.querySelectorAll('.counter');
       counters.forEach(counter => counter.textContent = counter.textContent.replace(/\d/g,'0'));
       if('IntersectionObserver' in window){
@@ -388,7 +415,6 @@
         }, {threshold:0.4});
         document.querySelectorAll('.counter').forEach(c=> obs.observe(c));
       } else {
-        // fallback: just set values
         document.querySelectorAll('.counter').forEach(c=>{
           const t = +c.getAttribute('data-target');
           c.textContent = (t>=1000 ? "₹"+t.toLocaleString() : t);
@@ -398,7 +424,7 @@
       // Steps reveal animation
       const stepCards = document.querySelectorAll('.card');
       const stepObs = new IntersectionObserver(entries=>{
-        entries.forEach((entry,i)=>{
+        entries.forEach(entry=>{
           if(entry.isIntersecting) entry.target.classList.add('visible');
         });
       }, {threshold:0.18});
