--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Farzeen Khan — Empowering Females</title>
 
-  <!-- Meta Pixel (kept) -->
+  <!-- Meta Pixel -->
   <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -29,14 +29,13 @@
       --muted:#d8b678;
       --whatsapp:#25D366;
       --bg:#000;
-      --glass: rgba(255,255,255,0.02);
     }
     *{box-sizing:border-box}
     body{margin:0;font-family:Inter,Arial,sans-serif;background:var(--bg);color:var(--accent);-webkit-font-smoothing:antialiased}
     a{color:inherit}
     .container{max-width:1000px;margin:0 auto;padding:18px}
 
-    /* ===== Buttons & animation ===== */
+    /* Buttons & animation */
     .watch-wrap{text-align:center;margin-top:12px}
     .watch-btn{
       display:inline-block;padding:10px 22px;background:var(--accent);color:#000;font-weight:800;border-radius:30px;
@@ -47,104 +46,38 @@
     .pulse-shake{ animation:shakeX 1.6s infinite; }
     @keyframes shakeX {0%,100%{transform:translateX(0)}20%{transform:translateX(-6px)}40%{transform:translateX(6px)}60%{transform:translateX(-4px)}80%{transform:translateX(4px)}}
 
-    /* ===== Coach ===== */
+    /* Coach */
     .coach{padding:26px 12px;text-align:center}
     .badge{background:var(--accent);color:#000;padding:8px 14px;border-radius:25px;display:inline-block;margin-bottom:10px;animation:popIn .6s}
     @keyframes popIn{0{transform:scale(.9);opacity:0}100{transform:scale(1);opacity:1}}
     h1{font-size:26px;margin:10px 0 8px;filter:drop-shadow(0 6px 18px rgba(255,182,66,0.12))}
     .vision{background:linear-gradient(180deg,var(--card),#070707);padding:12px;border-radius:10px;margin:12px auto;max-width:900px;color:#fff;box-shadow:0 8px 30px rgba(0,0,0,0.5)}
 
-    /* ===== Video ===== */
+    /* Video */
     .video-wrap{width:100%;max-width:880px;margin:14px auto;border-radius:10px;overflow:hidden;box-shadow:0 18px 50px rgba(0,0,0,0.6)}
     .video-wrap iframe{width:100%;height:100%;border:0;display:block}
     .video-aspect { aspect-ratio: 16/9; max-height:55vh; }
 
-    /* ===== Counters ===== */
+    /* Counters */
     .counters{display:flex;justify-content:center;gap:12px;flex-wrap:wrap;margin:16px 0}
     .counter-card{background:linear-gradient(145deg,#151515,#0e0e0e);border-radius:10px;padding:14px 16px;min-width:110px;box-shadow:0 10px 30px rgba(0,0,0,0.6);transition:transform .28s}
     .counter-card:hover{transform:translateY(-6px)}
     .counter-card .value{font-size:20px;font-weight:800;color:var(--accent)}
     .counter-card .label{font-size:12px;color:var(--muted)}
 
-    /* ================= NEW FEATURES SECTION (as requested, like the image) ================= */
-    .feature-wrapper{
-      background: linear-gradient(180deg,#0b0b0b,#040404);
-      border-radius:20px;
-      padding:26px;
-      margin:14px 0 18px;
-      box-shadow: 0 30px 60px rgba(0,0,0,0.6);
-      border: 1px solid rgba(255,182,66,0.04);
-    }
-    .feature-header{
-      text-align:center;
-      margin-bottom:18px;
-    }
-    .feature-header h2{
-      font-size:30px;
-      margin:0 0 6px;
-      color:var(--accent);
-    }
-    .feature-header p{
-      margin:0;
-      color:var(--muted);
-      font-size:15px;
-    }
-    .feature-grid{
-      display:grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap:16px;
-      margin-top:18px;
-    }
-
-    /* each feature card */
-    .feature-card{
-      background: linear-gradient(145deg,#0f0f0f,#080808);
-      border-radius:18px;
-      padding:18px;
-      display:flex;
-      gap:16px;
-      align-items:center;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.5);
-      min-height:110px;
-      transition:transform .28s, box-shadow .28s;
-    }
+    /* Features section (2x2 on phone) */
+    .feature-wrapper{ background: linear-gradient(180deg,#0b0b0b,#040404); border-radius:20px; padding:26px; margin:14px 0 18px; box-shadow: 0 30px 60px rgba(0,0,0,0.6); border: 1px solid rgba(255,182,66,0.04);}
+    .feature-header{text-align:center;margin-bottom:18px}
+    .feature-header h2{ font-size:30px;margin:0 0 6px;color:var(--accent); }
+    .feature-header p{ margin:0;color:var(--muted);font-size:15px; }
+    .feature-grid{ display:grid; grid-template-columns: repeat(2, 1fr); gap:16px; margin-top:18px; }
+    .feature-card{ background: linear-gradient(145deg,#0f0f0f,#080808); border-radius:18px; padding:18px; display:flex; gap:16px; align-items:center; box-shadow: 0 12px 30px rgba(0,0,0,0.5); min-height:110px; transition:transform .28s, box-shadow .28s; }
     .feature-card:hover{ transform:translateY(-8px); box-shadow:0 20px 50px rgba(0,0,0,0.65); }
+    .feature-media{ width:78px; height:78px; min-width:78px; border-radius:14px; background: linear-gradient(180deg,var(--accent), #c68613); display:flex; align-items:center; justify-content:center; box-shadow: 0 8px 20px rgba(255,182,66,0.12); font-size:30px; color:#000; flex-shrink:0; }
+    .feature-content{ text-align:left; display:flex; flex-direction:column; gap:6px; }
+    .feature-title{ font-weight:800; font-size:18px; color:var(--accent); }
+    .feature-desc{ color:#d3d3d3; font-size:13px; line-height:1.25; }
 
-    /* icon area large & left */
-    .feature-media{
-      width:78px;
-      height:78px;
-      min-width:78px;
-      border-radius:14px;
-      background: linear-gradient(180deg,var(--accent), #c68613);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      box-shadow: 0 8px 20px rgba(255,182,66,0.12);
-      font-size:30px;
-      color:#000;
-      flex-shrink:0;
-    }
-
-    /* text area left-aligned */
-    .feature-content{
-      text-align:left;
-      display:flex;
-      flex-direction:column;
-      gap:6px;
-    }
-    .feature-title{
-      font-weight:800;
-      font-size:18px;
-      color:var(--accent);
-    }
-    .feature-desc{
-      color:#d3d3d3;
-      font-size:13px;
-      line-height:1.25;
-    }
-
-    /* responsive tweaks */
     @media (max-width:860px){
       .feature-header h2{font-size:26px}
       .feature-grid{gap:12px}
@@ -158,9 +91,8 @@
       .feature-title{font-size:16px}
       .feature-desc{font-size:13px}
     }
-    /* ================ END FEATURES SECTION ================ */
 
-    /* ===== Steps / numbered circles responsive ===== */
+    /* Steps */
     .steps{max-width:760px;margin:12px auto;display:grid;gap:12px}
     .card{background:linear-gradient(145deg,#121212,#0b0b0b);padding:14px;border-radius:12px;box-shadow:0 12px 30px rgba(0,0,0,0.6);display:flex;gap:12px;align-items:flex-start;opacity:0;transform:translateX(16px);transition:all .5s}
     .card.visible{opacity:1;transform:none}
@@ -168,7 +100,7 @@
     .card h3{margin:0;font-size:clamp(15px,3.6vw,18px)}
     .card p{margin:6px 0 0;color:#cfcfcf;font-size:clamp(13px,3.3vw,15px)}
 
-    /* FAQ with toggle icon */
+    /* FAQ */
     .faq{max-width:720px;margin:22px auto;padding:12px;background:#0d0d0d;border-radius:12px;color:var(--accent);box-shadow:0 18px 40px rgba(0,0,0,0.6)}
     .faq-item{background:#151515;margin-bottom:10px;border-radius:10px;overflow:hidden;transition:all .32s}
     .faq-question{ padding:12px 16px;cursor:pointer;font-weight:800;position:relative;background:transparent;color:#f0c975; display:flex;align-items:center;justify-content:space-between;gap:12px;}
@@ -252,7 +184,7 @@
       </div>
     </section>
 
-    <!-- =================== FEATURES (new layout like your image) =================== -->
+    <!-- FEATURES -->
     <section class="feature-wrapper" aria-label="What you will learn">
       <div class="feature-header">
         <h2>🌱 Aap Yahan Seekhenge</h2>
@@ -293,7 +225,6 @@
         </div>
       </div>
     </section>
-    <!-- =================== end features =================== -->
 
     <!-- STEPS -->
     <section style="padding:16px 0;color:var(--accent)">
@@ -364,7 +295,7 @@
     </div>
   </div>
 
-  <!-- Modal (unchanged) -->
+  <!-- Modal -->
   <div id="leadModal" class="modal-backdrop" aria-hidden="true">
     <div class="modal" role="dialog" aria-modal="true" aria-labelledby="leadTitle">
       <button class="close-x" id="modalClose" aria-label="Close">&times;</button>
@@ -406,14 +337,14 @@
   </div>
 
   <script>
+    // --------------- CONFIG (inserted by assistant) ----------------
+    const GAS_URL = "https://script.google.com/macros/s/AKfycbwKt_OZvEENhoLbhG_AlX8tHzcNX95TgEYyzemGjhlK8eFsik8M6zCUN9dNzXaL4Cxa/exec";
+    const GAS_KEY = "FARZEEN-LEADS-2025!"; // change this if your Script Properties key differs
+    const WA_NUMBER = "919289142724";
+    const DEST_NAME = "Farzeen Mam";
+    // --------------- end config -----------------------------------
+
     (function(){
-      // CONFIG
-      const WA_NUMBER = "919289142724"; // +91 9289142724
-      const DEST_NAME = "Farzeen Mam";
-
-      // Optional Google Apps Script Web App URL (leave empty to skip Sheets)
-      const GAS_URL = ""; // paste your Apps Script web app URL here if you want leads to go to Google Sheets
-
       // Elements
       const openBtns = document.querySelectorAll('.open-whatsapp-form');
       const modal = document.getElementById('leadModal');
@@ -503,13 +434,21 @@
         if(src) msgLines.push(`Source: ${src}`);
         const message = encodeURIComponent(msgLines.join('\n'));
 
-        // Optional: POST to Google Sheets (Apps Script)
-        if(GAS_URL && GAS_URL.trim().length > 8){
+        // Optional: POST to Google Sheets via Apps Script (includes secure key)
+        if (typeof GAS_URL !== 'undefined' && GAS_URL && GAS_URL.trim().length > 8) {
           try {
-            const payload = { name, phone, age, profession: prof, source: src || 'landing', timestamp: new Date().toISOString() };
+            const payload = {
+              name: name,
+              phone: phone,
+              age: age,
+              profession: prof,
+              source: src || 'landing',
+              key: GAS_KEY
+            };
+            // Using no-cors for public Apps Script deployment (fire-and-forget)
             fetch(GAS_URL, {
               method: 'POST',
-              mode: 'cors',
+              mode: 'no-cors',
               cache: 'no-cache',
               headers: { 'Content-Type': 'application/json' },
               body: JSON.stringify(payload)
@@ -517,18 +456,21 @@
           } catch(err){}
         }
 
+        // Open WhatsApp
         const waUrl = `https://wa.me/${WA_NUMBER}?text=${message}`;
         window.open(waUrl, '_blank');
 
+        // Reset & close
         leadForm.reset();
         hideModal();
       });
 
+      // ESC to close
       document.addEventListener('keydown', function(e){
         if(e.key === 'Escape' && modal.style.display === 'flex') hideModal();
       });
 
-      // Counters animate when visible
+      // Counters: animate when visible
       const counters = document.querySelectorAll('.counter');
       counters.forEach(counter => counter.textContent = counter.textContent.replace(/\d/g,'0'));
       if('IntersectionObserver' in window){
@@ -561,7 +503,7 @@
         });
       }
 
-      // Steps reveal
+      // Steps reveal animation
       const stepCards = document.querySelectorAll('.card');
       const stepObs = new IntersectionObserver(entries=>{
         entries.forEach(entry=>{
@@ -570,7 +512,7 @@
       }, {threshold:0.18});
       stepCards.forEach(c=> stepObs.observe(c));
 
-      // FAQ toggles
+      // FAQ toggles (plus/minus)
       document.querySelectorAll('.faq-item').forEach(item=>{
         const q = item.querySelector('.faq-question');
         const icon = item.querySelector('.toggle-icon');
