--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
     <div class="watch-cta">👇 First Watch This Full Video 👇</div>
     <div style="margin-top:18px;">
       <a href="https://i.ibb.co/BK724dHs/IMG-8913.jpg" target="_blank">
-        <img src="https://i.ibb.co/BK724dHs/IMG-8913.jpg" alt="Farzeen Khan" style="width:100%;max-width:800px;height:auto;border-radius:8px;box-shadow:0 6px 20px rgba(0,0,0,0.6);margin-top:12px;" />
+       <div class="watch-wrap">
+    <div class="watch-cta">👇 First Watch This Full Video 👇</div>
+    <div style="margin-top:18px;">
+      <a href="https://ibb.co/kVxnZf1y" target="_blank">
+        <img src="https://i.ibb.co/ZRVs9PmJ/farzeen-mam.jpg" alt="Farzeen Khan" style="width:100%;max-width:600px;height:auto;border-radius:8px;box-shadow:0 6px 20px rgba(0,0,0,0.6);margin-top:12px;" />
       </a>
     </div>
   </div>
