--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
     });
 
     // WhatsApp submit + POST to Google Sheet
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbz6XqOuP6w9E_H6GgWNU53-FmRFtYCjU2y9zWqbQXBvhEDOSDUvT5gZqi-tZBW-vrY/exec";
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycb9S7DyqyYpgfYtKr9JHsq8Gg-vevxCPZqqBqhoTjk26Vyr4hW-NffQdspVeN22GsrS/exec
+";
 
     function sendToWhatsApp(){
       const name = document.getElementById('name').value.trim();
