--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@
     });
 
     // WhatsApp submit + POST to Google Sheet
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycb9S7DyqyYpgfYtKr9JHsq8Gg-vevxCPZqqBqhoTjk26Vyr4hW-NffQdspVeN22GsrS/exec
-";
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycb9S7DyqyYpgfYtKr9JHsq8Gg-vevxCPZqqBqhoTjk26Vyr4hW-NffQdspVeN22GsrS/exec";
 
     function sendToWhatsApp(){
       const name = document.getElementById('name').value.trim();
